[wip] [new-ui] Fix hanging extras in song entries when things are too long.

--- a/www-data/acoustics2.css
+++ b/www-data/acoustics2.css
@@ -218,6 +218,7 @@ ul li { display: inline; }
 				background-color: #fff;
 				border-bottom: 1px solid black;
 				height: 40px;
+				overflow: hidden;
 			}
 				.queue-song-handle {
 					width: 20px;
